[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Hit and Hurtboxes/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Agents/Enemies/Imp/proj_hit.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/pixil-frame-0 (4).png" type="Texture" id=3]
[ext_resource path="res://src/Agents/Enemies/Imp/HitboxProj.gd" type="Script" id=4]
[ext_resource path="res://src/Agents/Enemies/Imp/Projectile.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 14.1554

[sub_resource type="Animation" id=2]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="LineShape2D" id=3]

[node name="Projectile" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 5 )

[node name="Hitbox" parent="." instance=ExtResource( 1 )]
collision_layer = 0
collision_mask = 5
script = ExtResource( 4 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/shooting = SubResource( 2 )

[node name="proj_hit" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 3 )
disabled = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Hitbox"]
